# matrix-ticket-system

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose-dev.yml  galvyn.env.template
data/conf/nginx-dev/: nginx.conf
frontend/: components.json  eslint.config.js  index.html  orval.config.ts  package-lock.json  package.json
frontend/public/locales/de/: login.json  menu.json  settings.json
frontend/public/locales/en/: login.json  menu.json  settings.json
frontend/scripts/: gen-api.sh
frontend/src/: index.css  routeTree.gen.ts
frontend/src/api/: api.tsx  custom-fetch.ts
frontend/src/components/: login.tsx
frontend/src/components/layouts/: base-layout.tsx  heading-layout.tsx
frontend/src/components/ui/: button.tsx  card.tsx  field.tsx  heading.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  spinner.tsx  text.tsx  tooltip.tsx
frontend/src/context/: account.tsx  error-context.tsx
frontend/src/routes/: __root.tsx  _menu.tsx  index.tsx
libs/sqlx-sqlite/: Cargo.toml  README.md
libs/sqlx-sqlite/src/: lib.rs
libs/utility-macros/: Cargo.toml
libs/utility-macros/src/: bm_uuid.rs  lib.rs
scripts/: gen-new-certs.sh
webserver/: Cargo.toml
webserver/migrations/: 0001_initial.toml  0002_placeholder.toml  0003_placeholder.toml
webserver/src/: config.rs  main.rs
webserver/src/http/handler_frontend/: mod.rs
webserver/src/http/middlewares/: auth_required.rs  mod.rs
webserver/src/models/: mod.rs
webserver/src/modules/: mod.rs  oidc.rs
webserver/src/utils/: bm_uuid.rs  mod.rs
(+22 files in other folders)
